tests/baselines/reference/parserParameterList12.errors.txt
==== tests/cases/compiler/parserParameterList12.ts (1 errors) ====
    function F(a,) {
                ~
!!! parserParameterList12.ts(1,13): error TS1009: Trailing separator not allowed.
    }